# app/api/v1/ai/[aiId]/data-sources/web-urls/route.ts
@@ -27,7 +27,7 @@ async function postHandler(
       url,
     };
 
-    const dataSource = await aiService.createAIDataSource(
+    const dataSource = await aiService.createDataSourceAndAddToAI(
       authorizationContext,
       params.aiId,
       url,
